--- a/tutorials/utils/get_information_from_backwards.ipynb
+++ b/tutorials/utils/get_information_from_backwards.ipynb
@@ -1,10 +1,8 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# Tutorial of getting information from backwards"
    ]
@@ -19,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -49,28 +47,28 @@
      "output_type": "stream",
      "text": [
       "========== convolution 1d start ==========\n",
-      "<ConvolutionBackward0 object at 0x106d20be0>\n",
+      "<ConvolutionBackward0 object at 0x177a9b460>\n",
       "['_saved_bias_sym_sizes_opt', '_saved_dilation', '_saved_groups', '_saved_input', '_saved_output_padding', '_saved_padding', '_saved_stride', '_saved_transposed', '_saved_weight']\n",
-      "[(None, 0), (<AccumulateGrad object at 0x106d23df0>, 0), (<AccumulateGrad object at 0x106d238b0>, 0)]\n",
+      "[(None, 0), (<AccumulateGrad object at 0x177a9b370>, 0), (<AccumulateGrad object at 0x177a9b340>, 0)]\n",
       "========== convolution 1d end ==========\n",
       "========== convolution 2d start ==========\n",
-      "<ConvolutionBackward0 object at 0x106d23d90>\n",
+      "<ConvolutionBackward0 object at 0x177a9b400>\n",
       "['_saved_bias_sym_sizes_opt', '_saved_dilation', '_saved_groups', '_saved_input', '_saved_output_padding', '_saved_padding', '_saved_stride', '_saved_transposed', '_saved_weight']\n",
-      "[(None, 0), (<AccumulateGrad object at 0x106d23df0>, 0), (<AccumulateGrad object at 0x106d238b0>, 0)]\n",
+      "[(None, 0), (<AccumulateGrad object at 0x177a9b370>, 0), (<AccumulateGrad object at 0x177a9b340>, 0)]\n",
       "========== convolution 2d end ==========\n",
       "========== convolution 3d start ==========\n",
-      "<ConvolutionBackward0 object at 0x106d20be0>\n",
+      "<ConvolutionBackward0 object at 0x177a9b460>\n",
       "['_saved_bias_sym_sizes_opt', '_saved_dilation', '_saved_groups', '_saved_input', '_saved_output_padding', '_saved_padding', '_saved_stride', '_saved_transposed', '_saved_weight']\n",
-      "[(None, 0), (<AccumulateGrad object at 0x106d23df0>, 0), (<AccumulateGrad object at 0x106d238b0>, 0)]\n",
+      "[(None, 0), (<AccumulateGrad object at 0x177a9b370>, 0), (<AccumulateGrad object at 0x177a9b340>, 0)]\n",
       "========== convolution 3d end ==========\n",
-      "<ConvolutionBackward0 object at 0x106d20be0>\n",
+      "<ConvolutionBackward0 object at 0x177a9b460>\n",
       "['_saved_bias_sym_sizes_opt', '_saved_dilation', '_saved_groups', '_saved_input', '_saved_output_padding', '_saved_padding', '_saved_stride', '_saved_transposed', '_saved_weight']\n",
-      "[(None, 0), (<AccumulateGrad object at 0x106d23df0>, 0), (<AccumulateGrad object at 0x106d238b0>, 0)]\n",
+      "[(None, 0), (<AccumulateGrad object at 0x177a9b370>, 0), (<AccumulateGrad object at 0x177a9b340>, 0)]\n",
       "========== convolution with groups end ==========\n",
       "========== convolution with dilation start ==========\n",
-      "<ConvolutionBackward0 object at 0x106d23d90>\n",
+      "<ConvolutionBackward0 object at 0x177a9b400>\n",
       "['_saved_bias_sym_sizes_opt', '_saved_dilation', '_saved_groups', '_saved_input', '_saved_output_padding', '_saved_padding', '_saved_stride', '_saved_transposed', '_saved_weight']\n",
-      "[(None, 0), (<AccumulateGrad object at 0x106d23df0>, 0), (<AccumulateGrad object at 0x106d238b0>, 0)]\n",
+      "[(None, 0), (<AccumulateGrad object at 0x177a9b370>, 0), (<AccumulateGrad object at 0x177a9b340>, 0)]\n",
       "========== convolution with dilation end ==========\n"
      ]
     }
@@ -105,6 +103,41 @@
     "out = conv(torch.randn(1, 3, 4, 4))\n",
     "print_grad_fn(out)\n",
     "print(\"=\"*10, \"convolution with dilation end\", \"=\"*10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Transposed Convolutions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "========== transpose convolution 2d start ==========\n",
+      "<ConvolutionBackward0 object at 0x177a6ae30>\n",
+      "['_saved_bias_sym_sizes_opt', '_saved_dilation', '_saved_groups', '_saved_input', '_saved_output_padding', '_saved_padding', '_saved_stride', '_saved_transposed', '_saved_weight']\n",
+      "[(None, 0), (<AccumulateGrad object at 0x177a69cf0>, 0), (<AccumulateGrad object at 0x177a6ada0>, 0)]\n",
+      "True\n",
+      "========== transpose convolution 2d end ==========\n"
+     ]
+    }
+   ],
+   "source": [
+    "# transpose convolution 2d\n",
+    "print(\"=\"*10, \"transpose convolution 2d start\", \"=\"*10)\n",
+    "conv = nn.ConvTranspose2d(3, 4, 3, 1, 1)\n",
+    "out = conv(torch.randn(1, 3, 4, 4))\n",
+    "print_grad_fn(out)\n",
+    "print(out.grad_fn._saved_transposed)\n",
+    "print(\"=\"*10, \"transpose convolution 2d end\", \"=\"*10)"
    ]
   },
   {
@@ -353,12 +386,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## flatten, reshape, view, unsafeview, clone"
+    "## flatten, reshape, view, unsafeview, clone, repeat"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -366,30 +399,36 @@
      "output_type": "stream",
      "text": [
       "========== flatten start ==========\n",
-      "<ReshapeAliasBackward0 object at 0x106de9bd0>\n",
+      "<ReshapeAliasBackward0 object at 0x13a9fd450>\n",
       "['_saved_self_sym_sizes']\n",
-      "[(<AccumulateGrad object at 0x106de9720>, 0)]\n",
+      "[(<AccumulateGrad object at 0x13a9ff340>, 0)]\n",
       "========== flatten end ==========\n",
       "========== reshape start ==========\n",
-      "<ReshapeAliasBackward0 object at 0x106de9bd0>\n",
+      "<ReshapeAliasBackward0 object at 0x13a9fd450>\n",
       "['_saved_self_sym_sizes']\n",
-      "[(<AccumulateGrad object at 0x106de9720>, 0)]\n",
+      "[(<AccumulateGrad object at 0x13a9ff340>, 0)]\n",
       "========== reshape end ==========\n",
       "========== view start ==========\n",
-      "<ViewBackward0 object at 0x106de9bd0>\n",
+      "<ViewBackward0 object at 0x13a9fd450>\n",
       "['_saved_self_sym_sizes']\n",
-      "[(<AccumulateGrad object at 0x106de9720>, 0)]\n",
+      "[(<AccumulateGrad object at 0x13a9ff340>, 0)]\n",
       "========== view end ==========\n",
       "========== unsafeview start ==========\n",
-      "<ViewBackward0 object at 0x106de9bd0>\n",
+      "<ViewBackward0 object at 0x13a9fd450>\n",
       "['_saved_self_sym_sizes']\n",
-      "[(<AccumulateGrad object at 0x106de9720>, 0)]\n",
+      "[(<AccumulateGrad object at 0x13a9ff340>, 0)]\n",
       "========== unsafeview end ==========\n",
       "========== clone start ==========\n",
-      "<CloneBackward0 object at 0x1419575b0>\n",
+      "<CloneBackward0 object at 0x13a9fd450>\n",
       "[]\n",
-      "[(<AccumulateGrad object at 0x106de9bd0>, 0)]\n",
-      "========== clone end ==========\n"
+      "[(<AccumulateGrad object at 0x13a9ff340>, 0)]\n",
+      "========== clone end ==========\n",
+      "========== repeat start ==========\n",
+      "<RepeatBackward0 object at 0x13a9fd450>\n",
+      "['_saved_repeats', '_saved_self_sym_sizes']\n",
+      "[(<AccumulateGrad object at 0x13a9ffc70>, 0)]\n",
+      "(1, 3, 1, 1) (1, 3, 4, 4)\n",
+      "========== repeat end ==========\n"
      ]
     }
    ],
@@ -420,7 +459,13 @@
     "print(\"=\"*10, \"clone start\", \"=\"*10)\n",
     "out = a.clone()\n",
     "print_grad_fn(out)\n",
-    "print(\"=\"*10, \"clone end\", \"=\"*10)"
+    "print(\"=\"*10, \"clone end\", \"=\"*10)\n",
+    "# repeat\n",
+    "print(\"=\"*10, \"repeat start\", \"=\"*10)\n",
+    "out = a.repeat(1, 3, 1, 1)\n",
+    "print_grad_fn(out)\n",
+    "print(out.grad_fn._saved_repeats, out.grad_fn._saved_self_sym_sizes)\n",
+    "print(\"=\"*10, \"repeat end\", \"=\"*10)"
    ]
   },
   {
@@ -731,6 +776,103 @@
     "out = torch.nn.functional.interpolate(a, scale_factor=2, mode='bicubic', align_corners=True)\n",
     "print_grad_fn(out)\n",
     "print(\"=\"*10, \"upsample bicubic end\", \"=\"*10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## MultiHeadAttention"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "========== MultiheadAttention start ==========\n",
+      "<ViewBackward0 object at 0x13a9ff310>\n",
+      "['_saved_self_sym_sizes']\n",
+      "[(<AddmmBackward0 object at 0x13a8b6d10>, 0)]\n",
+      "((<SoftmaxBackward0 object at 0x13a9ff4c0>, 0), (<TransposeBackward0 object at 0x13a8b6740>, 0))\n",
+      "========== MultiheadAttention end ==========\n",
+      "[]\n"
+     ]
+    }
+   ],
+   "source": [
+    "mha = nn.MultiheadAttention(32, 4)\n",
+    "a = torch.randn(1, 32, 32, requires_grad=True)\n",
+    "# MultiheadAttention\n",
+    "print(\"=\"*10, \"MultiheadAttention start\", \"=\"*10)\n",
+    "out = mha(a, a, a)\n",
+    "print_grad_fn(out[0])\n",
+    "print(out[0].grad_fn.next_functions[0][0].next_functions[1][0].next_functions[0][0].next_functions[0][0].next_functions)\n",
+    "print(\"=\"*10, \"MultiheadAttention end\", \"=\"*10)\n",
+    "\n",
+    "from unip.core.pruner import forward_hook\n",
+    "hook = mha.register_forward_hook(forward_hook)\n",
+    "\n",
+    "out = mha(a, a, a)\n",
+    "hook.remove()\n",
+    "print(list(out[0].grad_fn.next_functions[0][0].metadata.keys()))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## embedding"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "========== Embedding start ==========\n",
+      "torch.Size([2, 4, 3])\n",
+      "<EmbeddingBackward0 object at 0x13b78a1a0>\n",
+      "['_saved_indices', '_saved_padding_idx', '_saved_scale_grad_by_freq', '_saved_sparse', '_saved_weight_sym_argsize_0']\n",
+      "[(<AccumulateGrad object at 0x13b78a080>, 0)]\n",
+      "========== Embedding end ==========\n",
+      "['T_destination', '__annotations__', '__call__', '__class__', '__constants__', '__delattr__', '__dict__', '__dir__', '__doc__', '__eq__', '__format__', '__ge__', '__getattr__', '__getattribute__', '__getstate__', '__gt__', '__hash__', '__init__', '__init_subclass__', '__le__', '__lt__', '__module__', '__ne__', '__new__', '__reduce__', '__reduce_ex__', '__repr__', '__setattr__', '__setstate__', '__sizeof__', '__str__', '__subclasshook__', '__weakref__', '_apply', '_backward_hooks', '_backward_pre_hooks', '_buffers', '_call_impl', '_fill_padding_idx_with_zero', '_forward_hooks', '_forward_hooks_with_kwargs', '_forward_pre_hooks', '_forward_pre_hooks_with_kwargs', '_get_backward_hooks', '_get_backward_pre_hooks', '_get_name', '_is_full_backward_hook', '_load_from_state_dict', '_load_state_dict_post_hooks', '_load_state_dict_pre_hooks', '_maybe_warn_non_full_backward_hook', '_modules', '_named_members', '_non_persistent_buffers_set', '_parameters', '_register_load_state_dict_pre_hook', '_register_state_dict_hook', '_replicate_for_data_parallel', '_save_to_state_dict', '_slow_forward', '_state_dict_hooks', '_state_dict_pre_hooks', '_version', 'add_module', 'apply', 'bfloat16', 'buffers', 'call_super_init', 'children', 'cpu', 'cuda', 'double', 'dump_patches', 'embedding_dim', 'eval', 'extra_repr', 'float', 'forward', 'from_pretrained', 'get_buffer', 'get_extra_state', 'get_parameter', 'get_submodule', 'half', 'ipu', 'load_state_dict', 'max_norm', 'modules', 'named_buffers', 'named_children', 'named_modules', 'named_parameters', 'norm_type', 'num_embeddings', 'padding_idx', 'parameters', 'register_backward_hook', 'register_buffer', 'register_forward_hook', 'register_forward_pre_hook', 'register_full_backward_hook', 'register_full_backward_pre_hook', 'register_load_state_dict_post_hook', 'register_module', 'register_parameter', 'register_state_dict_pre_hook', 'requires_grad_', 'reset_parameters', 'scale_grad_by_freq', 'set_extra_state', 'share_memory', 'sparse', 'state_dict', 'to', 'to_empty', 'train', 'training', 'type', 'weight', 'xpu', 'zero_grad']\n",
+      "====================\n",
+      "tensor([[0, 2, 0, 1],\n",
+      "        [1, 3, 4, 4]])\n",
+      "18446744073709551615\n",
+      "False\n",
+      "False\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "embedding = nn.Embedding(5, 3)\n",
+    "input_tensor = torch.LongTensor([[0, 2, 0, 1], [1, 3, 4, 4]])\n",
+    "# Embedding\n",
+    "print(\"=\"*10, \"Embedding start\", \"=\"*10)\n",
+    "out = embedding(input_tensor)\n",
+    "print(out.shape)\n",
+    "print_grad_fn(out)\n",
+    "print(\"=\"*10, \"Embedding end\", \"=\"*10)\n",
+    "\n",
+    "print([attr for attr in dir(embedding)])\n",
+    "print(\"=\"*20)\n",
+    "print(out.grad_fn._saved_indices)\n",
+    "print(out.grad_fn._saved_padding_idx)\n",
+    "print(out.grad_fn._saved_sparse)\n",
+    "print(out.grad_fn._saved_scale_grad_by_freq)\n",
+    "print(out.grad_fn._saved_weight_sym_argsize_0)"
    ]
   }
  ],
