add some unspported backward type to readme

--- a/tutorials/utils/get_information_from_backwards.ipynb
+++ b/tutorials/utils/get_information_from_backwards.ipynb
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -353,15 +353,25 @@
      "output_type": "stream",
      "text": [
       "========== concat start ==========\n",
-      "<CatBackward0 object at 0x106d23d90>\n",
+      "<CatBackward0 object at 0x136a04d60>\n",
       "['_saved_dim']\n",
-      "[(<AccumulateGrad object at 0x106d238b0>, 0), (<AccumulateGrad object at 0x106de9780>, 0)]\n",
+      "[(<AccumulateGrad object at 0x145f23250>, 0), (<AccumulateGrad object at 0x145f23220>, 0)]\n",
       "========== concat end ==========\n",
       "========== split start ==========\n",
-      "<SplitBackward0 object at 0x106d23760>\n",
+      "<SplitBackward0 object at 0x145f21e70>\n",
       "['_saved_dim', '_saved_self_sym_sizes', '_saved_split_size']\n",
-      "[(<AccumulateGrad object at 0x106d23550>, 0)]\n",
-      "========== split end ==========\n"
+      "[(<AccumulateGrad object at 0x145f21ed0>, 0)]\n",
+      "========== split end ==========\n",
+      "========== unsafesplit start ==========\n",
+      "<SplitBackward0 object at 0x13689a6b0>\n",
+      "['_saved_dim', '_saved_self_sym_sizes', '_saved_split_size']\n",
+      "[(<AccumulateGrad object at 0x145f21e70>, 0)]\n",
+      "========== unsafesplit end ==========\n",
+      "========== unbindbackward start ==========\n",
+      "<UnbindBackward0 object at 0x13689a6b0>\n",
+      "['_saved_dim']\n",
+      "[(<AccumulateGrad object at 0x145f21e70>, 0)]\n",
+      "========== unbindbackward end ==========\n"
      ]
     }
    ],
@@ -379,7 +389,19 @@
     "out = torch.chunk(a, 2, dim=1)\n",
     "out = out[0]\n",
     "print_grad_fn(out)\n",
-    "print(\"=\"*10, \"split end\", \"=\"*10)"
+    "print(\"=\"*10, \"split end\", \"=\"*10)\n",
+    "# unsafesplit\n",
+    "print(\"=\"*10, \"unsafesplit start\", \"=\"*10)\n",
+    "out = torch.split(a, 3, dim=0)\n",
+    "out = out[0]\n",
+    "print_grad_fn(out)\n",
+    "print(\"=\"*10, \"unsafesplit end\", \"=\"*10)\n",
+    "# unbindbackward\n",
+    "print(\"=\"*10, \"unbindbackward start\", \"=\"*10)\n",
+    "for i in a:\n",
+    "    out = i\n",
+    "print_grad_fn(out)\n",
+    "print(\"=\"*10, \"unbindbackward end\", \"=\"*10)"
    ]
   },
   {
@@ -477,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -485,40 +507,47 @@
      "output_type": "stream",
      "text": [
       "========== permute start ==========\n",
-      "<PermuteBackward0 object at 0x141ddff10>\n",
+      "<PermuteBackward0 object at 0x13686b970>\n",
       "['_saved_dims']\n",
-      "[(<AccumulateGrad object at 0x141ddfe80>, 0)]\n",
+      "[(<AccumulateGrad object at 0x145f2f970>, 0)]\n",
       "========== permute end ==========\n",
       "========== squeeze start ==========\n",
-      "<SqueezeBackward0 object at 0x141ddff10>\n",
+      "<SqueezeBackward0 object at 0x13686b970>\n",
       "['_saved_self_sym_sizes']\n",
-      "[(<AccumulateGrad object at 0x141ddffd0>, 0)]\n",
+      "[(<AccumulateGrad object at 0x145f2f9a0>, 0)]\n",
       "========== squeeze end ==========\n",
       "========== unsqueeze start ==========\n",
-      "<UnsqueezeBackward0 object at 0x141ddff10>\n",
+      "<UnsqueezeBackward0 object at 0x13686b970>\n",
       "['_saved_dim']\n",
-      "[(<AccumulateGrad object at 0x141ddfeb0>, 0)]\n",
+      "[(<AccumulateGrad object at 0x145f2f9a0>, 0)]\n",
       "========== unsqueeze end ==========\n",
       "========== transpose start ==========\n",
-      "<TransposeBackward0 object at 0x106d23d90>\n",
+      "<TransposeBackward0 object at 0x13686b970>\n",
       "['_saved_dim0', '_saved_dim1']\n",
-      "[(<AccumulateGrad object at 0x141ddff10>, 0)]\n",
+      "[(<AccumulateGrad object at 0x145f2f9a0>, 0)]\n",
       "========== transpose end ==========\n",
       "========== einops start ==========\n",
-      "<ReshapeAliasBackward0 object at 0x106d23d90>\n",
+      "<ReshapeAliasBackward0 object at 0x13686b970>\n",
       "['_saved_self_sym_sizes']\n",
-      "[(<PermuteBackward0 object at 0x141dc31f0>, 0)]\n",
+      "[(<PermuteBackward0 object at 0x145f2f9a0>, 0)]\n",
       "========== einops end ==========\n",
-      "========== slice backward single start ==========\n",
-      "<SliceBackward0 object at 0x141dc6bc0>\n",
-      "['_saved_dim', '_saved_end', '_saved_self_sym_sizes', '_saved_start', '_saved_step']\n",
-      "[(<SliceBackward0 object at 0x141dc31f0>, 0)]\n",
-      "========== slice backward single end ==========\n",
       "========== expansion start ==========\n",
-      "<ExpandBackward0 object at 0x106d23d90>\n",
+      "<ExpandBackward0 object at 0x10857c8b0>\n",
       "['_saved_self_sym_sizes']\n",
-      "[(<AccumulateGrad object at 0x141dc31f0>, 0)]\n",
-      "========== expansion end ==========\n"
+      "[(<AccumulateGrad object at 0x145f2f9a0>, 0)]\n",
+      "========== expansion end ==========\n",
+      "========== slice backward single start ==========\n",
+      "<SliceBackward0 object at 0x13686b970>\n",
+      "['_saved_dim', '_saved_end', '_saved_self_sym_sizes', '_saved_start', '_saved_step']\n",
+      "[(<SliceBackward0 object at 0x145f2f9a0>, 0)]\n",
+      "========== slice backward single end ==========\n",
+      "========== index backward start ==========\n",
+      "<IndexBackward0 object at 0x10857c8b0>\n",
+      "['_saved_indices', '_saved_self_sym_sizes']\n",
+      "[(<SliceBackward0 object at 0x145f2f9a0>, 0)]\n",
+      "(1, 3, 10, 32) (None, None, tensor([1, 2]))\n",
+      "['_saved_dim', '_saved_end', '_saved_self_sym_sizes', '_saved_start', '_saved_step']\n",
+      "========== index backward end ==========\n"
      ]
     }
    ],
@@ -551,18 +580,26 @@
     "out = rearrange(a, 'b c h w -> b c (h w)')\n",
     "print_grad_fn(out)\n",
     "print(\"=\"*10, \"einops end\", \"=\"*10)\n",
+    "# expansion\n",
+    "a = torch.randn(1, 3, 1, 1, requires_grad=True)\n",
+    "print(\"=\"*10, \"expansion start\", \"=\"*10)\n",
+    "out = a.expand(1, 3, 4, 4)\n",
+    "print_grad_fn(out)\n",
+    "print(\"=\"*10, \"expansion end\", \"=\"*10)\n",
     "# slice backward single\n",
     "print(\"=\"*10, \"slice backward single start\", \"=\"*10)\n",
     "a = torch.randn(1, 3, 10, 32, requires_grad=True)\n",
     "out = a[:, :16, :, :]\n",
     "print_grad_fn(out)\n",
     "print(\"=\"*10, \"slice backward single end\", \"=\"*10)\n",
-    "# expansion\n",
-    "a = torch.randn(1, 3, 1, 1, requires_grad=True)\n",
-    "print(\"=\"*10, \"expansion start\", \"=\"*10)\n",
-    "out = a.expand(1, 3, 4, 4)\n",
+    "# index backward\n",
+    "print(\"=\"*10, \"index backward start\", \"=\"*10)\n",
+    "a = torch.randn(1, 3, 10, 32, requires_grad=True)\n",
+    "out = a[:, :, [1, 2], :]\n",
     "print_grad_fn(out)\n",
-    "print(\"=\"*10, \"expansion end\", \"=\"*10)"
+    "print(out.grad_fn._saved_self_sym_sizes, out.grad_fn._saved_indices)\n",
+    "print([attr for attr in dir(out.grad_fn.next_functions[0][0]) if attr[:6]==\"_saved\"])\n",
+    "print(\"=\"*10, \"index backward end\", \"=\"*10)"
    ]
   },
   {
